2006-09-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/user.scm, src/kahua/server.scm: **SECURITY FIX**
	  Now kahua-current-user store cons of login-name and dbpath
	  to keyserver.  So user realm are separated per each database.

	  Now for non-privilege login (like kahua-web with non-member-edit
	  option), you must do
	    (parameterize ((current-db #f))
	      (set! (kahua-current-user-name) nick-name))
	  instead of just
	    (set! (kahua-current-user-name) nick-name)
	  And you must not use (kahua-current-user-name) to check the user
	  now login as registed user.  You should use (kahua-current-user)
	  for the purpose.

2006-09-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence.scm, src/kahua/persistence/*.scm,
	  src/kahua-server.scm: Change
	  Now worker check database connection is alive before process client request.
	  If the connection is dead, it tries to reopen connection.

	* test/persistence.scm: Add
	  tests for removing object.

	* src/kahua/persistence.scm, src/kahua/persistence/*.scm: Add
	  Removed flag and remove-kahua-instance added.
	  Now make-kahua-collection excludes object that have #t as
	  removed flag, and find-kahua-instance return #f if it find
	  removed object.

2006-09-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence.scm: Change
	  Now kahua-check-transaction! deprecated.

	* src/kahua-server.scm, src/kahua/persistence.scm,
	  src/kahua/persistence/*.scm: Change
	  Split with-db into with-kahua-db-connection and
	  with-kahua-db-transaction.  Now worker process connects to
	  database at its start up time, and does a transaction per
	  request.

2006-09-09  Katsutoshi Itoh  <cut-sea@kahua.org>

	* replace skel/proj/base.kahua
	  to skel/proj/auto-update-base.kahua and skel/proj/slot-acl-base.kahua.
	* <auto-update-base> and <slot-acl-base> is prototype
	  of MOP base class collection.
	
2006-09-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.6 released.

	* README: Added
